Initial Design Changes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>This is a tutorial for One Month Rails</p>
+<div class="jumbotron">
+    <h1>About</h1>
+    <p>This is a tutorial for One Month Rails</p>
+</div>
